# gm_io_events

./: .gitignore  Cargo.toml  LICENSE  README.md  premake5.lua
.github/workflows/: build.yml
include/: filewatch.hpp
projects/linux/gmake/: Makefile  gmcl_io_events.make  gmsv_io_events.make
projects/windows/vs2019/: gm_io_events.sln  gmcl_gm_io_events.vcxproj  gmcl_io_events.vcxproj  gmcl_io_events.vcxproj.filters  gmsv_gm_io_events.vcxproj  gmsv_io_events.vcxproj  gmsv_io_events.vcxproj.filters  io_events.sln
source/: main.cpp
src/: lib.rs
